--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <meta name="google-site-verification" content="v7cs4uL1xxS4QU5BE0kmdHyqWRrxrhqIpCf5GnZ_S8Q" />
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Happy Birthday!</title>
@@ -994,4 +995,5 @@
         };
     </script>
 </body>
+
 </html>
